--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -46,12 +46,12 @@
 {{ $style := resources.Get "styles.scss" | toCSS | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}" emotion="🤩">
 <!-- Additional Styles for the App -->
-<link rel="stylesheet" href="https://docs-support-how-to.netlify.app/assets/main.css">
+<link rel="stylesheet" href="https://support-site-search.netlify.app/assets/main.css">
 
-<link rel="apple-touch-icon" sizes="180x180" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" />
-<link rel="icon" type="image/png" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" sizes="32x32" />
-<link rel="icon" type="image/png" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" sizes="16x16" />
-<link rel="mask-icon" href="https://docs-support-how-to.netlify.app/favicons/favicon.ico" color="#00c7b7" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://support-site-search.netlify.app/favicons/favicon.ico" />
+<link rel="icon" type="image/png" href="https://support-site-search.netlify.app/favicons/favicon.ico" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://support-site-search.netlify.app/favicons/favicon.ico" sizes="16x16" />
+<link rel="mask-icon" href="https://support-site-search.netlify.app/favicons/favicon.ico" color="#00c7b7" />
 {{- with .OutputFormats.Get "RSS" -}}
 <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $title }}" />
 <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $title }}" />
