--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -66,41 +66,10 @@
             $('.ais-SearchBox-input').focus();
         })
     }
-    
-    $("#buy-now-button").on('click', function () {
-        if($("#buy-now-list").css("display") == "block") {
-            $("#buy-now-list").css("display", "none");
-        } else {
-            $("#buy-now-list").css("display", "block");
-        }
-    });
-    $("#buy-now-button").on('mouseleave', function () {
-        if($("#buy-now-list").css("display") == "block") {
-            $("#buy-now-list").css("display", "none");
-        }
-    });
-    $("#buy-now-button").on('mouseenter', function () {
-        $("#buy-now-list").css("display", "block");
-    });
-    $("#login-button").on('click', function () {
-        if($("#login-list").css("display") == "block") {
-            $("#login-list").css("display", "none");
-        } else {
-            $("#login-list").css("display", "block");
-        }
-    });
-    $("#login-button").on('mouseleave', function () {
-        if($("#login-list").css("display") == "block") {
-            $("#login-list").css("display", "none");
-        }
-    });
-    $("#login-button").on('mouseenter', function () {
-        $("#login-list").css("display", "block");
-    });
 </script>
 
 <script
     src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CObject.assign%2CObject.entries">
 </script>
 
-<script src="https://docs-support-how-to.netlify.app/assets/bundle.js"></script>
+<script src="https://support-site-search.netlify.app/assets/bundle.js"></script>
