--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <main id="post-container" class="how-to-wrapper">
     {{- partial "components/search-modal" . -}}
     {{- partial "components/announcement" . -}}
-    {{- partial "components/banner" . -}}
+    <!-- {{- partial "components/banner" . -}} -->
     {{- if or (eq .Params.Type "product") (eq .Params.Type "article") -}}
     <div class="container">
         <div class="row">
