--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <div id="root"></div>
 <div id="modal-root"></div>
 {{- partial "components/announcement" . -}}
-{{- partial "components/banner" . -}}
+<!-- {{- partial "components/banner" . -}} -->
 {{- partial "components/search-results" . -}}
 {{- partial "components/support-docs" . -}}
 {{- end -}}
